# mx-sdk-rs

./: Cargo.toml
contracts/drwa/asset-manager/: Cargo.toml
contracts/drwa/asset-manager/scenarios/: asset-manager-denial-signals.scen.json  asset-manager-init.scen.json
contracts/drwa/asset-manager/src/: drwa_asset_manager_proxy.rs  lib.rs
contracts/drwa/asset-manager/tests/: asset_manager_blackbox_test.rs  asset_manager_gas_bench_test.rs  asset_manager_integration_rs_test.rs  asset_manager_scenario_rs_test.rs  asset_manager_upgrade_test.rs  asset_manager_whitebox_test.rs
contracts/drwa/asset-manager/wasm/: Cargo.toml
contracts/drwa/attestation/src/: drwa_attestation_proxy.rs  lib.rs
contracts/drwa/attestation/tests/: attestation_blackbox_test.rs  attestation_upgrade_test.rs  (+1 more)
contracts/drwa/common/: Cargo.toml
contracts/drwa/common/test-harness/wasm/: Cargo.toml
contracts/drwa/common/test-harness/wasm/src/: lib.rs
contracts/drwa/interactor/: Cargo.toml
contracts/mrv/aggregator/: Cargo.toml
contracts/mrv/atomic-swap/: Cargo.toml
contracts/mrv/buffer-pool/: Cargo.toml
contracts/mrv/carbon-credit/: Cargo.toml
contracts/mrv/come-settlement/: Cargo.toml
contracts/mrv/common/: Cargo.toml
contracts/mrv/governance/: Cargo.toml  init_trace.json  propose_accept_trace.json
contracts/mrv/governance-multisig/: Cargo.toml
contracts/mrv/gsoc-registry/: Cargo.toml
contracts/mrv/income-distribution/: Cargo.toml
contracts/mrv/registry/: Cargo.toml
contracts/mrv/reserve-proof-registry/: Cargo.toml
tools/: generate_mrv_deploy_blackbox_tests.sh
(+140 files in other folders)
